# scikit-umfpack

./: .buildinfo  .gitignore  .travis.yml  LICENSE  README  README.md  README.rst  develop.html  environment.yml  genindex.html  index.html  install.html  interface.html  meson.build  meson_swig.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  release.html  search.html  searchindex.js  setup.py  umfpack.html
.github/workflows/: build_test.yml  linux.yml
_sources/: install.rst.txt
_sources/reference/: scikits.umfpack.UmfpackLU.L.rst.txt  scikits.umfpack.UmfpackLU.R.rst.txt  scikits.umfpack.UmfpackLU.U.rst.txt  scikits.umfpack.UmfpackLU.nnz.rst.txt  scikits.umfpack.UmfpackLU.perm_c.rst.txt  scikits.umfpack.UmfpackLU.perm_r.rst.txt  scikits.umfpack.UmfpackLU.rst.txt  scikits.umfpack.UmfpackLU.shape.rst.txt  scikits.umfpack.UmfpackLU.solve.rst.txt  scikits.umfpack.UmfpackLU.solve_sparse.rst.txt  scikits.umfpack.splu.rst.txt  scikits.umfpack.spsolve.rst.txt  scikits.umfpack.umfpack.UmfpackContext.__call__.rst.txt  scikits.umfpack.umfpack.UmfpackContext.free.rst.txt  scikits.umfpack.umfpack.UmfpackContext.free_numeric.rst.txt  scikits.umfpack.umfpack.UmfpackContext.free_symbolic.rst.txt  scikits.umfpack.umfpack.UmfpackContext.linsolve.rst.txt  scikits.umfpack.umfpack.UmfpackContext.lu.rst.txt  scikits.umfpack.umfpack.UmfpackContext.numeric.rst.txt  scikits.umfpack.umfpack.UmfpackContext.report_control.rst.txt  scikits.umfpack.umfpack.UmfpackContext.report_info.rst.txt  scikits.umfpack.umfpack.UmfpackContext.report_numeric.rst.txt  scikits.umfpack.umfpack.UmfpackContext.report_symbolic.rst.txt  scikits.umfpack.umfpack.UmfpackContext.rst.txt  scikits.umfpack.umfpack.UmfpackContext.solve.rst.txt  scikits.umfpack.umfpack.UmfpackContext.strControl.rst.txt  scikits.umfpack.umfpack.UmfpackContext.strInfo.rst.txt  scikits.umfpack.umfpack.UmfpackContext.symbolic.rst.txt
docs/: Makefile  conf.py  develop.rst  do-gh-pages.sh  index.rst  install.rst  interface.rst  links.inc  release.rst  umfpack.rst
reference/: scikits.umfpack.UmfpackLU.L.html  scikits.umfpack.UmfpackLU.R.html  scikits.umfpack.UmfpackLU.U.html  scikits.umfpack.UmfpackLU.html  scikits.umfpack.UmfpackLU.nnz.html  scikits.umfpack.UmfpackLU.perm_c.html  scikits.umfpack.UmfpackLU.perm_r.html  scikits.umfpack.UmfpackLU.shape.html  scikits.umfpack.UmfpackLU.solve.html  scikits.umfpack.UmfpackLU.solve_sparse.html  scikits.umfpack.splu.html  scikits.umfpack.spsolve.html  scikits.umfpack.umfpack.UmfpackContext.__call__.html  scikits.umfpack.umfpack.UmfpackContext.free.html  scikits.umfpack.umfpack.UmfpackContext.free_numeric.html  scikits.umfpack.umfpack.UmfpackContext.free_symbolic.html  scikits.umfpack.umfpack.UmfpackContext.html  scikits.umfpack.umfpack.UmfpackContext.linsolve.html  scikits.umfpack.umfpack.UmfpackContext.lu.html  scikits.umfpack.umfpack.UmfpackContext.numeric.html  scikits.umfpack.umfpack.UmfpackContext.report_control.html  scikits.umfpack.umfpack.UmfpackContext.report_info.html  scikits.umfpack.umfpack.UmfpackContext.report_numeric.html  scikits.umfpack.umfpack.UmfpackContext.report_symbolic.html  scikits.umfpack.umfpack.UmfpackContext.solve.html  scikits.umfpack.umfpack.UmfpackContext.strControl.html  scikits.umfpack.umfpack.UmfpackContext.strInfo.html  scikits.umfpack.umfpack.UmfpackContext.symbolic.html
scikits/: meson.build
scikits/umfpack/: __init__.py  interface.py  meson.build  setup.py  stdint.h  umfpack.i  umfpack.py
scikits/umfpack/tests/: test_interface.py  test_umfpack.py  try_umfpack.py
tools/ci/: windows-condaforge-native.ini
