[build-system]
build-backend = 'mesonpy'
requires = [
    'meson-python',
    'numpy',
]

[project]
name = 'scikit-umfpack'
version = "0.4.0"
license = {file = "LICENSE"}
description = "Python interface to UMFPACK sparse direct solver."
maintainers = [
    {name = "Robert Cimmrman", email="cimrman3@ntc.zcu.cz"},
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
]
readme = "README.rst"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Topic :: Scientific/Engineering',
    'Programming Language :: C',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

[project.urls]
homepage = "https://scikit-umfpack.github.io/scikit-umfpack"
documentation = "https://scikit-umfpack.github.io/scikit-umfpack"
source = "https://github.com/scikit-umfpack/scikit-umfpack"
tracker = "https://github.com/scikit-umfpack/scikit-umfpack/issues"
